@@ -528,6 +528,23 @@ Also, 0..9 = $below_ten, one,two,three = $ascii and the bonus answer is $mixed."
         text="dialog"
     [/label]
 
+
+    [label]
+        x,y=18,4
+        text="Gamestate Inspector"
+    [/label]
+    [event]
+        name=moveto
+        first_time_only=no
+        [filter]
+            x,y,side=18,4,1
+        [/filter]
+
+        [inspect]
+            name="moveto(18,4)"
+        [/inspect]
+    [/event]
+
     [event]
         name=moveto
         first_time_only=no
