@@ -301,6 +301,8 @@
 		<Unit filename="..\..\src\gui\dialogs\game_load.hpp" />
 		<Unit filename="..\..\src\gui\dialogs\game_save.cpp" />
 		<Unit filename="..\..\src\gui\dialogs\game_save.hpp" />
+		<Unit filename="..\..\src\gui\dialogs\gamestate_inspector.cpp" />
+		<Unit filename="..\..\src\gui\dialogs\gamestate_inspector.hpp" />
 		<Unit filename="..\..\src\gui\dialogs\helper.hpp" />
 		<Unit filename="..\..\src\gui\dialogs\language_selection.cpp" />
 		<Unit filename="..\..\src\gui\dialogs\language_selection.hpp" />
